--- a/bookshop/public/pages/about.html
+++ b/bookshop/public/pages/about.html
@@ -54,7 +54,7 @@
  <div class="form-group">
    <label class="col-md-2 control-label">{{ 'PRICE' | translate }}</label>
             <div class="col-md-9">
-            <input type="number" class="form-control input-sm" name="cijena" ng-model="commentData.Cijena" placeholder="14.99$">
+            <input type="number" step="0.01" min=0 class="form-control input-sm" name="cijena" ng-model="commentData.Cijena" placeholder="14.99$">
         </div>
  </div>
 
@@ -107,3 +107,4 @@
              </div>
     </form>
       </div>     </div>
+
